# tjug_26_haskell_examples

./: LICENSE  hoadur.cabal  small_android.json
app/: Main.hs
src/: Main.hs  Parser.hs
test/: ParserSpec.hs
