name:                hoadur
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Mikołaj Fejzer
maintainer:          mfejzer@mat.umk.pl
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Parser
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.10.0.0
                     , text >= 1.1.1.0
                     , bytestring >= 0.9
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hoadur
                     , aeson >= 0.10.0.0 
                     , text >= 1.1.1.0
                     , bytestring >= 0.9
                     , hspec == 2.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


executable hoadur
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hoadur
  default-language:    Haskell2010

